tests/Tuc/Fixtures/errors/GroupWithoutName.tuc
tuc parse error test
participants
    GenericService parts

group